--- a/components/maintenance/staff.jade
+++ b/components/maintenance/staff.jade
@@ -192,7 +192,7 @@ template(name='schedule')
     //- .ui.center.aligned.header 
     //-     i.calendar.icon
     //-     |schedule
-    table.ui.definition.celled.striped.unstackable.selectable.table
+    table.ui.definition.celled.striped.unstackable.selectable.basic.table
         thead
             tr
                 th
