--- a/client/fields.jade
+++ b/client/fields.jade
@@ -33,7 +33,7 @@ template(name='color_view')
 
 template(name='color_icon_edit')
     div
-    .ui.small.inline.header
+    .ui.inline.header
         if icon
             +i name=icon
             //- i.icon(class=icon)
@@ -50,7 +50,7 @@ template(name='color_icon_edit')
 template(name='icon_edit')
     div
     .ui.right.icon.input
-        .ui.small.inline.header
+        .ui.inline.header
             if icon
                 +i name=icon
                 //- i.grey.icon(class=icon)
@@ -82,7 +82,7 @@ template(name='i')
     //- img(src="https://img.icons8.com/office/48/000000/#{name}.png" class=classes title=title)
     //- img(src="https://img.icons8.com/ultraviolet/48/000000/#{name}.png" class=classes title=title)
 
-template(name='ismall')
+template(name='')
     img(src="https://img.icons8.com/office/24/000000/#{name}.png" class=classes title=title)
     //- img(src="https://img.icons8.com/ultraviolet/24/000000/#{name}.png" class=classes title=title)
 
@@ -110,7 +110,7 @@ template(name='link_edit')
 template(name='link_view')
     if field_value
         div
-        .ui.small.inline.header 
+        .ui.inline.header 
             if icon
                 +i name=icon
                 //- i.grey.icon(class=icon)
@@ -137,7 +137,7 @@ template(name='image_view')
 
 template(name='pdf_edit')
     .ui.form
-        .ui.inline.small.header
+        .ui.inline.header
             if icon
                 +i name=icon
                 //- i.grey.icon(class=icon)
@@ -187,7 +187,7 @@ template(name='pdf_view')
 
 template(name='image_edit')
     .ui.form
-        .ui.inline.small.header
+        .ui.inline.header
             if icon
                 +i name=icon
                 //- i.grey.icon(class=icon)
@@ -209,7 +209,7 @@ template(name='image_edit')
                 if is_frontdesk
                     .upload-btn-wrapper            
                         .btn Take Photo (switch camera to front)
-                        input(type='file' name='upload_image' accept='image/*' capture='user')
+                            input(type='file' name='upload_image' accept='image/*' capture='user')
                 else            
                     input(type='file' name='upload_image' accept='image/*' capture='user')
 
@@ -230,7 +230,7 @@ template(name='image_link_view')
 template(name='textarea_view')
     if field_value
         div
-        .ui.inline.small.header
+        .ui.inline.header
             if icon
                 +i name=icon
                 //- i.grey.icon(class=icon)
@@ -249,8 +249,7 @@ template(name='textarea_edit')
         .field
             label 
                 if icon
-                    i.icon(name=icon)
-                    //- +i name=icon classes='ui mini inline image'
+                    +i name=icon classes='ui mini inline image'
                 if title
                     |#{title}
                 else if label
@@ -336,7 +335,7 @@ template(name='document_view')
         
 template(name='text_edit')
     .ui.fluid.icon.input
-        .ui.small.inline.header
+        .ui.inline.header
             if icon
                 +i name=icon
                 //- i.grey.icon(class=icon)
@@ -352,7 +351,7 @@ template(name='text_edit')
 
 template(name='slug_edit')
     .ui.fluid.icon.input
-        .ui.small.inline.header
+        .ui.inline.header
             if icon
                 +i name=icon
                 //- i.grey.icon(class=icon)
@@ -371,7 +370,7 @@ template(name='slug_view')
     if field_value
         unless header
             div
-            .ui.small.inline.header
+            .ui.inline.header
                 if icon
                     //- i.grey.icon(class=icon)
                     +i name=icon
@@ -383,7 +382,7 @@ template(name='slug_view')
                     |#{key}
                 else
                     |#{this}
-        .ui.inline.small.header #{field_value}
+        .ui.inline.header #{field_value}
 
 
 
@@ -400,7 +399,7 @@ template(name='text_view')
     if field_value
         unless header
             div
-            .ui.small.inline.header
+            .ui.inline.header
                 if icon
                     //- i.grey.icon(class=icon)
                     +i name=icon
@@ -412,14 +411,14 @@ template(name='text_view')
                     |#{key}
                 else
                     |#{this}
-        .ui.inline.small.header #{field_value}
+        .ui.inline.header #{field_value}
 
 
 
 
 template(name='parent_edit')
     .ui.fluid.icon.input
-        .ui.small.inline.header
+        .ui.inline.header
             |parent edit
             if icon
                 +i name=icon
@@ -448,17 +447,16 @@ template(name='parent_view')
                 |#{key}
             else
                 |#{this}
-        .ui.inline.small.header #{field_value}
+        .ui.inline.header #{field_value}
 
 
 
 
 template(name='phone_edit')
     .ui.fluid.input
-        .ui.inline.small.header 
-            if icon
-                i.grey.icon(class=icon)
-                //- +i name=icon
+        if icon
+            +i name=icon
+        .ui.inline.header 
             if title
                 |#{title}
             else if label
@@ -474,7 +472,7 @@ template(name='phone_view')
     if field_value
         unless header
             div
-            .ui.small.inline.header
+            .ui.inline.header
                 if icon
                     //- i.grey.icon(class=icon)
                     +i name=icon
@@ -510,7 +508,7 @@ template(name='number_edit')
 template(name='number_view')
     if field_value
         div
-        .ui.small.inline.header
+        .ui.inline.header
             if icon
                 +i name=icon
                 //- i.grey.icon(class=icon)
@@ -528,9 +526,9 @@ template(name='number_view')
 
 template(name='date_edit')
     .ui.fluid.input
-        .ui.small.inline.header
-            if icon
-                i.grey.icon(class=icon)            
+        if icon
+            +i name=icon classes='ui inline mini image'   
+        .ui.inline.header
             if title
                 |#{title}
             else if label
@@ -546,7 +544,7 @@ template(name='date_edit')
 template(name='date_view')
     if field_value
         div
-        .ui.small.inline.header
+        .ui.inline.header
             if icon
                 +i name=icon
                 //- i.grey.icon(class=icon)
@@ -564,7 +562,7 @@ template(name='date_view')
 
 template(name='time_edit')
     .ui.fluid.input
-        .ui.small.inline.header
+        .ui.inline.header
             if icon
                 i.grey.icon(class=icon)            
             if title
@@ -579,10 +577,9 @@ template(name='time_edit')
                 
 template(name='time_view')
     if field_value
+        if icon
+            +i name=icon
         .ui.inline.header
-            if icon
-                i.grey.icon(class=icon)
-                //- +i name=icon
             if title
                 |#{title}
             else if label
@@ -626,7 +623,7 @@ template(name='datetime_view')
 template(name='array_edit')
     div
     .ui.fluid.input
-        .ui.small.inline.header
+        .ui.inline.header
             if icon
                 +i name=icon
                 //- i.grey.icon(class=icon)
@@ -648,7 +645,7 @@ template(name='array_edit')
 template(name='array_view')
     if field_value
         div
-        .ui.inline.small.header
+        .ui.inline.header
             if icon
                 //- i.grey.icon(class=icon)
                 +i name=icon
@@ -786,7 +783,7 @@ template(name='signature_edit')
                     i.remove.icon
 
 template(name='signature_view')
-    .ui.small.header
+    .ui.header
         if icon
             +i name=icon
             //- i.icon(class=icon)
@@ -804,10 +801,9 @@ template(name='signature_view')
 
 template(name='boolean_edit')
     div
-    .ui.small.inline.header
-        if icon
-            //- i.icon(class=icon)
-            +i name=icon classes='ui inline mini image'
+    if icon
+        +i name=icon classes='ui inline mini image'
+    .ui.inline.header
         if title
             |#{title}
         else if label
@@ -832,7 +828,7 @@ template(name='boolean_edit')
 
 template(name='boolean_view')
     div
-    .ui.small.inline.header
+    .ui.inline.header
         if icon
             //- i.icon(class=icon)
             +i name=icon classes='ui inline mini image'
@@ -855,7 +851,7 @@ template(name='single_doc_view')
         if icon
             +i name=icon
             //- i.icon(class=icon)
-        .ui.small.inline.header(title=key)
+        .ui.inline.header(title=key)
             |#{title}
         .ui.basic.label
             if icon
@@ -866,13 +862,13 @@ template(name='single_doc_view')
 
 template(name='single_doc_edit')
     div
-    .ui.small.inline.header(title=key) 
+    .ui.inline.header(title=key) 
         if icon
             +i name=icon
             //- i.icon(class=icon)
         |#{label} #{title}
     each choices
-        .ui.small.circular.compact.button.select_choice(class=choice_class)
+        .ui.circular.compact.button.select_choice(class=choice_class)
             if icon
                 +i name=icon classes='ui mini inline image'
                 //- i.icon(class=icon)
@@ -885,10 +881,10 @@ template(name='multi_doc_edit')
     div
     if icon
         +i name=icon classes='ui mini inline image'
-    .ui.small.inline.header(title=key)
+    .ui.inline.header(title=key)
         |#{title} #{label}    
     each choices
-        .ui.circular.compact.button.select_choice(class=choice_class)
+        .ui.circular.compact.small.button.select_choice(class=choice_class)
             if icon
                 +i name=icon classes='ui mini inline image'
                 //- i.grey.icon(class=icon)
@@ -944,7 +940,7 @@ template(name='multi_doc_view')
 
 template(name='single_user_edit')
     div
-    .ui.inline.small.header 
+    .ui.inline.header 
         if icon
             +i name=icon
             //- i.icon(class=icon)
@@ -978,11 +974,11 @@ template(name='single_user_edit')
         //-     .content
         //-         h4.ui.header
         //-             |#{first_name} #{last_name}
-        //-             small @#{username}
+        //-             @#{username}
 
 
 template(name='single_user_view')
-    .ui.small.inline.header 
+    .ui.inline.header 
         if icon
             +i name=icon    
         |#{title}
@@ -995,14 +991,14 @@ template(name='single_user_view')
 
 template(name='single_person_view')
     div
-    .ui.small.header #{title}
+    .ui.header #{title}
     if field_value
         +person_card field_value
     div
             
             
 template(name='single_person_edit')
-    .ui.small.header #{title}
+    .ui.header #{title}
     .ui.form
         if field_value
             +person_card field_value
@@ -1023,7 +1019,7 @@ template(name='single_person_edit')
                                     //- else
                                     //-     i.user.icon
                                     strong &nbsp; #{first_name} #{last_name}
-                                    small @#{username}
+                                 @#{username}
                                 .ui.sub.header #{building_number} #{address}
             else
                 .ui.header No results
@@ -1038,11 +1034,11 @@ template(name='single_person_edit')
             //             .content
             //                 h4.ui.header
             //                     |#{first_name} #{last_name}
-            //                     small @#{username}
+            //                     @#{username}
 
 
 template(name='multi_user_edit')
-    .ui.small.inline.header
+    .ui.inline.header
         if icon
             +i name=icon
             //- i.icon(class=icon)
@@ -1067,7 +1063,7 @@ template(name='multi_user_edit')
                         h5.ui.header
                             img.ui.avatar.image(src="{{c.url image_id width=100 height=100 gravity='face' crop='fill'}}")
                             strong #{first_name} #{last_name}
-                            small #{username}
+                         #{username}
     +clear_value                
     .ui.list
         each field_value
@@ -1082,12 +1078,12 @@ template(name='multi_user_edit')
                 //-         .content
                 //-             h4.ui.header
                 //-                 |#{first_name} #{last_name}
-                //-                 small @#{username}
+                //-                 @#{username}
 
 
 template(name='multi_doc_input')
     //- .ui.form
-        //- .ui.small.inline.header
+        //- .ui.inline.header
         //-     if icon
         //-         i.icon(class=icon)
         //-     if title
@@ -1128,10 +1124,10 @@ template(name='multi_doc_input')
                 //-         .content
                 //-             h4.ui.header
                 //-                 |#{first_name} #{last_name}
-                //-                 small @#{username}
+                //-                 @#{username}
 
 template(name='multi_user_view')
-    .ui.small.header 
+    .ui.header 
         |#{title}
         //- #{key} #{label}
     each field_value
