--- a/components/delta/delta.jade
+++ b/components/delta/delta.jade
@@ -9,29 +9,29 @@ template(name='delta')
                         | #{title}
                     unless is_loading
                         if currentUser
-                            .ui.icon.large.basic.button.add_model_doc(title="Add #{title}")
-                                i.plus.green.large.icon
-                            //- +i name='plus'
+                            .ui.icon.compact.button.add_model_doc(title="Add #{title}")
+                                +i name='plus' classes='ui inline mini image'
                         //- if can_edit
                             //- +edit_circular.button
             
                         if is_dev
                             //- +user_list_toggle key='bookmark_ids' icon='bookmark' label='Bookmark' color='red'
-                            .ui.icon.large.basic.button.edit_model
+                            .ui.icon.large.button.edit_model
                                 i.large.cog.icon
                                 //- +i name='settings'
                                 //- | Configure #{plural}
                         // .ui.divider
                         // // each sessions
-                        // //     .ui.icon.basic.button.select_session(class=session_selector_class title='select session')
+                        // //     .ui.icon.button.select_session(class=session_selector_class title='select session')
                         // //         i.play.icon
                         if current_delta
                             if is_dev
-                                .ui.icon.large.basic.button.print_delta(title='print session doc')
+                                .ui.icon.large.button.print_delta(title='print session doc')
                                     i.code.icon
-                            .ui.reset.icon.basic.large.button(title='reload session')
-                                i.refresh.icon
-                            .ui.delete_delta.icon.basic.button(title='delete session')
+                            .ui.reset.icon.compact.button(title='reload session')
+                                //- i.refresh.icon
+                                +i name='refresh' classes='ui mini inline image'
+                            .ui.delete_delta.icon.button(title='delete session')
                                 i.trash.icon
                         else
                             .create_delta.ui.large.blue.button(title='new session')
@@ -114,19 +114,19 @@ template(name='delta_result')
                     .extra
                         if is_model
                             +user_list_toggle key='bookmark_ids' icon='bookmark' label='Bookmark' color='red'
-                            a.ui.basic.button.route_model(href="/m/#{slug}")
+                            a.ui.button.route_model(href="/m/#{slug}")
                                 i.sitemap.teal.icon
                                 |view model
                             if is_admin
-                                a.ui.basic.button.route_model(href="/model/edit/#{_id}")
+                                a.ui.button.route_model(href="/model/edit/#{_id}")
                                     i.edit.blue.icon
                                     |edit model
                         else
                             if can_edit
-                                a.ui.large.icon.basic.button(href="/m/#{current_model.slug}/#{_id}/edit" title='edit')
+                                a.ui.large.icon.button(href="/m/#{current_model.slug}/#{_id}/edit" title='edit')
                                     i.pencil.blue.large.icon
                                     //- |edit
-                            a.ui.icon.large.basic.button(href="/m/#{current_model.slug}/#{_id}/view" title='view')
+                            a.ui.icon.large.button(href="/m/#{current_model.slug}/#{_id}/view" title='view')
                                 i.right.chevron.yellow.large.icon
                         if _author_id
                             +author_info
